# msm

./: .dockerignore  .gitignore  README.md
.github/workflows/: cd.yml  ci.yml  signed-commits.yml
contract-tests/: parity.sh
dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
dashboard/src/application/: load-reconciliation.ts  ports.ts
dashboard/src/domain/: reconciliation.ts
dashboard/src/infrastructure/: http-gateway.ts
dashboard/src/presentation/: App.tsx
dataform/: README.md  workflow_settings.yaml
dataform/definitions/monitoring/: feature_baseline.sqlx  psi_daily.sqlx  residuals_daily.sqlx
dataform/definitions/sources/: declarations.js
dataform/definitions/staging/: click_revenue.sqlx  rolling_rpc.sqlx
dataform/definitions/training/: rpc_training_rows.sqlx
docs/: SOW.md  ci-secrets.md  data-contract.md
docs/adr/: 0001-stack-and-activation.md  0002-explain-path.md
docs/runbooks/: bq-schema-migration.md  breaker-reset.md  endpoint-scale-down.md  model-rollback.md  rollback-plan.md  secret-rotation.md
infra/terraform/: .gitignore  .terraform.lock.hcl  cloud_run.tf  main.tf  monitoring.tf  variables_runtime.tf  wif.tf
infra/terraform/envs/: README.md  prod.tfvars  staging.tfvars
mcp-servers/mlops-mcp/: pyproject.toml
mcp-servers/mlops-mcp/src/: server.py
mcp-servers/scoring-mcp/: pyproject.toml
mcp-servers/scoring-mcp/src/: hmac_verifier.py  scopes.py  server.py  test_schema_roundtrip.py  test_scopes.py
ops/: bootstrap.sh  deploy_real_model.py  explanation_metadata.json  finish_deploy.py  owner-actions.sh  seed_synthetic_data.sql  smoke.sh
ops/e2e/: docker-compose.yml  fake_vertex.py  reconciliation_rows.json  run.sh
ops/ingestion/: README.md
ops/load/: run.sh
ops/perf/: 20260428T075634Z__v1_explain.json  20260428T075634Z__v1_score.json  20260428T081022Z__v1_explain.json  20260428T081022Z__v1_score.json  staging-load.sh
ops/rollback/: dry-run.sh
proto/: scoring.proto
services/activation/: Dockerfile  pyproject.toml
services/activation/src/msm_activation/: __init__.py  __main__.py
services/activation/src/msm_activation/application/: __init__.py  publish.py
services/activation/src/msm_activation/domain/: __init__.py  envelope.py  mode.py
services/activation/src/msm_activation/infrastructure/: __init__.py  oci_channel.py  ssgtm_channel.py
services/bounds-calibration/: .importlinter  Dockerfile  pyproject.toml
services/bounds-calibration/src/msm_bounds/: __init__.py
services/bounds-calibration/src/msm_bounds/application/: __init__.py  calibrate.py  ports.py
services/bounds-calibration/src/msm_bounds/domain/: __init__.py  bounds.py
services/bounds-calibration/src/msm_bounds/infrastructure/: bigquery_source.py  github_gateway.py
services/bounds-calibration/src/msm_bounds/presentation/: cli.py
services/bounds-calibration/tests/: test_bounds.py
services/breaker-automation/: .importlinter  Dockerfile  pyproject.toml
services/breaker-automation/src/msm_breaker/: __init__.py
services/breaker-automation/src/msm_breaker/application/: __init__.py  handle_anomaly.py  ports.py
services/breaker-automation/src/msm_breaker/domain/: __init__.py  decision.py  event.py
services/breaker-automation/src/msm_breaker/infrastructure/: secret_manager_writer.py
services/breaker-automation/src/msm_breaker/presentation/: function.py
services/breaker-automation/tests/: test_breaker.py
services/ml-pipeline/: .importlinter  Dockerfile  pyproject.toml
services/ml-pipeline/src/msm_ml/: __init__.py
services/ml-pipeline/src/msm_ml/application/: __init__.py  detect_drift.py  explain_model.py  ports.py  train_model.py
services/ml-pipeline/src/msm_ml/domain/: __init__.py  drift.py  explanation.py  features.py  model_version.py
services/ml-pipeline/src/msm_ml/infrastructure/: __init__.py  bigquery_feature_repo.py  shap_explainer.py  vertex_registry.py  xgboost_trainer.py
services/ml-pipeline/src/msm_ml/presentation/: __init__.py  cli.py
services/ml-pipeline/tests/: test_application.py  test_domain.py  test_explanation.py
services/mock-vertex/: Dockerfile  main.py
services/reconciliation/: .importlinter  Dockerfile  pyproject.toml
services/reconciliation/sql/: predictions_vs_revenue.sql
services/reconciliation/src/msm_reconciliation/: __init__.py
services/reconciliation/src/msm_reconciliation/application/: __init__.py  load_window.py  ports.py
services/reconciliation/src/msm_reconciliation/domain/: __init__.py  row.py
services/reconciliation/src/msm_reconciliation/infrastructure/: bigquery_repo.py  memory_repo.py
services/reconciliation/src/msm_reconciliation/presentation/: api.py
services/reconciliation/tests/: test_application.py  test_domain.py
services/scoring-api/: Cargo.toml  Dockerfile  deny.toml
services/scoring-api/crates/application/: Cargo.toml
services/scoring-api/crates/application/src/: explain_click.rs  lib.rs  score_click.rs
services/scoring-api/crates/contract/: Cargo.toml  build.rs
services/scoring-api/crates/contract/examples/: encode_sample.rs
services/scoring-api/crates/contract/src/: lib.rs
services/scoring-api/crates/contract/tests/: roundtrip.rs
services/scoring-api/crates/domain/: Cargo.toml
services/scoring-api/crates/domain/src/: canary.rs  click.rs  clv.rs  errors.rs  guardrails.rs  lib.rs  ports.rs  prediction.rs
services/scoring-api/crates/infrastructure/: Cargo.toml
services/scoring-api/crates/infrastructure/src/: bigquery_data_layer.rs  gcp_auth.rs  lib.rs  pubsub_audit.rs  pubsub_predictions.rs  runtime_config.rs  secret_manager_config.rs  system_clock.rs  vertex_clv.rs  vertex_endpoint.rs  vertex_explain.rs  vertex_feature_store.rs
services/scoring-api/crates/infrastructure/tests/: adapters_integration.rs  vertex_integration.rs
services/scoring-api/crates/presentation/: Cargo.toml
services/scoring-api/crates/presentation/src/: main.rs
