# application — use cases. §2: imports only `domain`.
[package]
name = "msm-scoring-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
msm-scoring-domain = { path = "../domain" }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
