# contract — generated types from proto/scoring.proto.
# §1: Protobuf is the cross-service contract language.
[package]
name = "msm-scoring-contract"
version = "0.1.0"
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
prost = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
