# presentation — HTTP entry point. §2: imports application + infrastructure; never domain-only internals.
[package]
name = "msm-scoring-presentation"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "scoring-api"
path = "src/main.rs"

[dependencies]
msm-scoring-domain = { path = "../domain" }
msm-scoring-application = { path = "../application" }
msm-scoring-infrastructure = { path = "../infrastructure" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
async-trait = { workspace = true }
